@@ -877,6 +877,9 @@ subtype_dealloc(PyObject *self)
 			assert(base);
 		}
 
+		/* Extract the type again; tp_del may have changed it */
+		type = Py_TYPE(self);
+
 		/* Call the base tp_dealloc() */
 		assert(basedealloc);
 		basedealloc(self);
@@ -957,6 +960,9 @@ subtype_dealloc(PyObject *self)
 			}
 		}
 	}
+
+	/* Extract the type again; tp_del may have changed it */
+	type = Py_TYPE(self);
 
 	/* Call the base tp_dealloc(); first retrack self if
 	 * basedealloc knows about gc.
